# blog

./: .dockerignore  .gitattributes  .gitignore  .prettierignore  .prettierrc.toml  .rustfmt.toml  Caddyfile  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml  err  readme.md  stamp.ps1
.github/chglog/: release.yml
.github/workflows/: all.yml
blog_dev/: docker-compose.yml
blog_no_db/: docker-compose.yml
blog_preview/: Dockerfile  docker-compose.yml
blog_prod/: docker-compose.yml
cli/: Cargo.toml  sqlx-data.json
cli/src/: about.rs  app.rs  article.rs  cmd.rs  display.rs  editor.rs  ext.rs  gc.rs  main.rs  media.rs  music.rs  note.rs  post.rs  prelude.rs  render.rs  sftp.rs  syntax.rs  utility.rs
cli/src/about/: edit.rs  fetch.rs
cli/src/article/: create.rs  delete.rs  edit.rs  fetch.rs  info.rs  list.rs  publish.rs  tag.rs
cli/src/media/: files.rs
cli/src/music/: create.rs  delete.rs  list.rs
cli/src/note/: batch_delete.rs  create.rs  delete.rs  edit.rs  list.rs
cli/src/post/: create.rs  delete.rs  edit.rs  list.rs
cli/src/sftp/: files.rs  uri.rs
doc/: cli.md  configuration.md  database.md  index.md  overview.md
pg/: Dockerfile  docker-compose.yml  migrate1.sql  schema.sql  userinit.sql
scripts/: a1.md  a2.md  publish.ps1
server/: Cargo.toml  sqlx-data.json
server/src/: about.rs  app.rs  article.rs  db.rs  ext.rs  feed.rs  filters.rs  home.rs  main.rs  media.rs  music.rs  note.rs  post.rs  prelude.rs  response.rs  rss.rs  search.rs  xml.rs
server/src/article/: index.rs
server/templates/: about.html  article.html  articles_page.html  base.html  home.html  music.html  music_page.html  note.html  note_page.html  notes_page.html  post.html  posts.html  posts_page.html  search.html  single_post.html
server/templates/search/: article_result.html  music_result.html
src/: app.rs  article.rs  date_ext.rs  db.rs  default_ext.rs  home.rs  main.rs  post.rs  prelude.rs  response.rs  response_ext.rs  schema.sql  watcher.rs
static/: global.js  localize_dates.js  luxon.js  notes.js  posts.js  sakura.css  search_page.js  style.css
templates/: article.html  base.html  home.html  post.html
