[package]
name = "blog"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
askama = "0.11.0"
axum = "0.4.3"
chrono = "0.4.19"
indexmap = "1.7.0"
log = "0.4.14"
notify = "5.0.0-pre.13"
pulldown-cmark = { version = "0.9.0", default-features = false }
tokio = { version = "1.15.0", features = ["full"] }
tower = { version = "0.4.11", features = ["timeout"], default-features = false }
