[package]
name = "blog"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
askama = { version = "0.11.0", features = ["with-axum"] }
askama_axum = "0.1.0"
axum = "0.4.3"
log = "0.4.14"
pulldown-cmark = { version = "0.9.0", default-features = false }
sqlx = { version = "0.5.10", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio = { version = "1.15.0", features = ["full"] }
tower = { version = "0.4.11", features = ["timeout"], default-features = false }
tower-http = { version = "0.2.0", features = ["full"] }
tracing-subscriber = "0.3.5"
url-escape = "0.1.0"

[workspace]
members = ["cli"]
