[package]
name = "blog-cli"
version = "0.19.1"
edition = "2021"

[[bin]]
name = "blog"
path = "src/main.rs"

[dependencies]
clap = { version = "3.0.13", features = ["cargo", "env", "unicode", "wrap_help"] }
tokio = { version = "1.15.0", features = ["full"] }
sqlx = { version = "0.5.10", features = ["runtime-tokio-rustls", "postgres", "chrono", "offline"] }
url-escape = "0.1.0"
anyhow = "1.0.53"
sha2 = "0.10.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
comrak = { version = "0.12.1", default-features = false }
html-escape = "0.2.9"
futures = "0.3.19"
shell-escape = "0.1.5"
edit = "0.1.3"
directories = "4.0.1"
toml = "0.5.8"
rand = "0.8.4"
