[package]
name = "blog-cli"
version = "0.28.5"
edition = "2021"

[[bin]]
name = "blog"
path = "src/main.rs"

[dependencies]
clap = { version = "3.0.14", features = ["cargo", "env", "unicode", "wrap_help"] }
tokio = { version = "1.16.1", features = ["full"] }
sqlx = { version = "0.5.10", features = ["runtime-tokio-rustls", "postgres", "chrono", "offline"] }
url-escape = "0.1.0"
anyhow = "1.0.53"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
comrak = { version = "0.12.1", default-features = false }
html-escape = "0.2.9"
futures = "0.3.21"
directories = "4.0.1"
toml = "0.5.8"
rand = "0.8.4"
# url = { version = "2.2.2", features = ["serde"] }
shell-words = "1.1.0"
which = "4.2.4"
tempfile = "3.3.0"
