[package]
name = "blog-cli"
version = "0.29.2"
edition = "2021"

[[bin]]
name = "blog"
path = "src/main.rs"

[dependencies]
clap = { version = "3.1.5", features = ["cargo", "env", "unicode", "wrap_help"] }
tokio = { version = "1.17.0", features = ["full"] }
sqlx = { version = "0.5.11", features = ["runtime-tokio-rustls", "postgres", "chrono", "offline"] }
url-escape = "0.1.0"
anyhow = "1.0.55"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
comrak = { version = "0.12.1", default-features = false }
html-escape = "0.2.9"
futures = "0.3.21"
directories = "4.0.1"
toml = "0.5.8"
rand = "0.8.5"
# url = { version = "2.2.2", features = ["serde"] }
shell-words = "1.1.0"
which = "4.2.4"
tempfile = "3.3.0"
