[package]
name = "blog"
version = "0.10.1"
edition = "2021"

[[bin]]
name = "blog-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.53"
askama = { version = "0.11.0", features = ["with-axum"] }
askama_axum = "0.1.0"
axum = "0.4.4"
chrono = "0.4.19"
clap = { version = "3.0.13", features = ["env", "wrap_help", "unicode"] }
futures = "0.3.19"
html-escape = "0.2.9"
log = "0.4.14"
serde = { version = "1.0.136", features = ["derive"] }
sqlx = { version = "0.5.10", features = ["runtime-tokio-rustls", "postgres", "chrono", "offline"] }
tokio = { version = "1.16.1", features = ["full"] }
tower = { version = "0.4.11", features = ["timeout"], default-features = false }
tower-http = { version = "0.2.1", features = ["full"] }
tracing-subscriber = "0.3.7"
url-escape = "0.1.0"
