[package]
name = "blog"
version = "0.17.1"
edition = "2021"

[[bin]]
name = "blog-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.55"
askama = { version = "0.11.1", features = ["with-axum"] }
askama_axum = "0.1.0"
atom_syndication = "0.11.0"
axum = "0.4.8"
chrono = "0.4.19"
clap = { version = "3.1.5", features = ["env", "wrap_help", "unicode"] }
env_logger = "0.9.0"
futures = "0.3.21"
html-escape = "0.2.9"
indexmap = "1.8.0"
log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_debug"] }
mime_guess = "2.0.4"
serde = { version = "1.0.136", features = ["derive"] }
sqlx = { version = "0.5.11", features = ["runtime-tokio-rustls", "postgres", "chrono", "offline"] }
tokio = { version = "1.17.0", features = ["full"] }
# tower = { version = "0.4.11", features = ["timeout"], default-features = false }
tower-http = { version = "0.2.3", features = ["full"] }
url = "2.2.2"
url-escape = "0.1.0"
